<resources>
    <string name="app_name">乐动</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="Smart_fitness">智能健身</string>
    <string name="not_networks_conntion">没有网络连接,请稍后再试</string>
    <string name="Refused_permission">拒绝授权，软件将无法正常使用</string>
    <string name="Permission_to_apply">权限申请</string>
    <string name="Please_insert_memory_card">请插入内存卡</string>
    <string name="Permission_prompting">在设置-应用-权限中开启相关权限，以保证功能的正常使用</string>
    <string name="user_number">手机号/邮箱账号</string>
    <string name="user_pass">请输入密码</string>
    <string name="loging">登录</string>
    <string name="reigst">注册</string>
    <string name="fast_reigst">手机快速注册</string>
    <string name="repass">忘记密码</string>
    <string name="sms_number">请输入11位手机号码</string>
    <string name="code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="re_new_pass">请输入新密码</string>
    <string name="determine_number">请确认密码</string>
    <string name="Message_authentication">短信验证</string>
    <string name="pass_find_phone">手机短信找回</string>
    <string name="pass_find_email">邮箱找回</string>
    <string name="intput_email_number">请输入邮箱帐号</string>
    <string name="input_pass">请输入6-20位密码</string>
    <string name="phone_or_sms">手机号/邮箱账号</string>
    <string name="ToPhoneFind">切换至手机短信找回</string>
    <string name="ToEmailFind">切换至邮箱找回</string>
    <string name="height">身高(cm)</string>
    <string name="wight">体重(kg)</string>
    <string name="age">年龄</string>
    <string name="Last_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="name">昵称</string>
    <string name="phone">联系方式</string>
    <string name="email">邮箱</string>
    <string name="area">地区</string>
    <string name="sure">完成</string>
    <string name="app_names">乐动</string>
    <string name="circle">圈子</string>
    <string name="user">我的</string>
    <string name="new_Clock">最近打卡</string>
    <string name="action_bicycle">动感单车</string>
    <string name="Skip_rope">活力跳绳</string>
    <string name="myMedal">我的勋章</string>
    <string name="myChallenge">我的挑战</string>
    <string name="Clock">打卡记录</string>
    <string name="Movement_list">运动榜单</string>
    <string name="Movement_count">总运动次数</string>
    <string name="Movement_time">总运动小时</string>
    <string name="Total_km">总运动公里</string>
    <string name="Total_calories">总消耗千卡</string>
    <string name="start_movment">开始骑行</string>
    <string name="app_message">乐动消息</string>
    <string name="Health_records">健康小管家</string>
    <string name="Remind_training">训练提醒</string>
    <string name="About_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_login_msg">是否需要退出登录！</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="week">周</string>
    <string name="Head">头像</string>
    <string name="gender">性别</string>
    <string name="adress">地址</string>
    <string name="appName_ID">乐动ID</string>
    <string name="save">保存</string>
    <string name="user_set">个人设置</string>
    <string name="year">年</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="minuteS">分钟</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="title">请选择时间</string>
    <string name="boboby">男</string>
    <string name="girl">女</string>
    <string name="Select_city">选择城市</string>
    <string name="Select_gender">选择性别</string>
    <string name="km">里程</string>
    <string name="kical">大卡</string>
    <string name="Time">时间</string>
    <string name="qk">千卡</string>
    <string name="kicals">卡路里</string>
    <string name="current_version">当前版本</string>
    <string name="service_phone">服务热线</string>
    <string name="scoring">来评分</string>
    <string name="about_we">关于我们</string>
    <string name="Toage">岁</string>
    <string name="Towight">体重</string>
    <string name="Toheight">身高</string>
    <string name="size">体型</string>
    <string name="fatness">肥胖</string>
    <string name="Side_score">体侧得分</string>
    <string name="subdivision">分</string>
    <string name="ToBodyfat">体脂(正常)</string>
    <string name="Basal_metabolism">基础代谢(kcal)</string>
    <string name="bmi">BMI(低)</string>
    <string name="sharing">分享</string>
    <string name="Clearcache">清除缓存</string>
    <string name="rePass">修改密码</string>
    <string name="makeHelp">修改密码</string>
    <string name="feedback">意见反馈</string>
    <string name="set">设置</string>
    <string name="ToHelp">使用帮助</string>
    <string name="input_oldpass">请输入旧密码</string>
    <string name="intput_newPass">请输入新密码</string>
    <string name="forIntPutNewPass">再次输入新密码</string>
    <string name="history_good_results">历史最好成绩</string>
    <string name="MovementType">运动模式</string>
    <string name="ChallengeType">挑战模式</string>
    <string name="MovementType_text">中途退出,数据保留,可以打卡。</string>
    <string name="ChallengeType_text">中途退出,数据不保留,完成后再记录。</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="Resistance_choose">阻力选择</string>
    <string name="conntionDervice">连接设备</string>
    <string name="kms">公里</string>
    <string name="heart">心率</string>
    <string name="uniform">匀速</string>
    <string name="BigHeart">最高心率</string>
    <string name="velocity">速度</string>
    <string name="How_challenge">时长挑战</string>
    <string name="Calorie_challenge">卡路里挑战</string>
    <string name="Km_challenge">公里挑战</string>
    <string name="medal">勋章</string>
    <string name="Nomedal">未获得的勋章</string>
    <string name="Challenge_record">挑战记录</string>
    <string name="history_record">历史记录</string>
    <string name="daka_record">打卡记录</string>
    <string name="ToFlasedaka_record">是否保存打卡记录？</string>
    <string name="average">均速</string>
    <string name="average_mileage">平均里程:</string>
    <string name="average_time">平均时间:</string>
    <string name="averages">平均</string>
    <string name="count">次数</string>
    <string name="averages_count">平均次数</string>
    <string name="Total_count">总次数</string>
    <string name="Total_mileage">总里程:</string>
    <string name="Total_TIME">总时间:</string>
    <string name="Total_kiacl">总卡路里:</string>
    <string name="average_kical">平均卡路里</string>
    <string name="monment">运动</string>
    <string name="monment_date">运动记录</string>
    <string name="NoMonment">从不</string>
    <string name="Monment_three">每周3次以上</string>
    <string name="ToMonment">经常</string>
    <string name="figure">身材</string>
    <string name="robust">健壮</string>
    <string name="strong">强健</string>
    <string name="compact">紧致</string>
    <string name="symmetry">匀称</string>
    <string name="With_meat">有肉</string>
    <string name="microbe">微胖</string>
    <string name="overweight">超重</string>
    <string name="Severe_obesity">严重肥胖</string>
    <string name="Side_report">体侧报告</string>
    <string name="delete">删除</string>
    <string name="ReName">重命名</string>
    <string name="true_number">请输入合法的手机号码或者邮箱号码</string>
    <string name="true_number_p">请输入合法的手机号码</string>
    <string name="Nopassword">密码不合法</string>
    <string name="NopasswordTwo">俩次密码不一样</string>
    <string name="NoCode">验证码错误</string>
    <string name="NogetCode">获取验证码失败</string>
    <string name="reigst_sure">注册成功</string>
    <string name="Noreigst">注册失败</string>
    <string name="zhaohui_true">找回密码成功</string>
    <string name="zhaohui_No">找回密码失败</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="No_Internet_connection">没有网络连接,请稍后再试</string>
    <string name="Error">账号或密码错误，请重新输入</string>
    <string name="login_error">登录失败</string>
    <string name="trueRequset">请求成功</string>
    <string name="inputNoNull">信息不能为空</string>
    <string name="Nowrite">未填写</string>
    <string name="oldPass">原始密码错误</string>
    <string name="NoRequest">请求失败</string>
    <string name="No_data">没有符合该条件的数据信息</string>
    <string name="bicycle">单车</string>
    <string name="rope">跳绳</string>
    <string name="ToConntion">已连接</string>
    <string name="NoToConntion">未连接</string>
    <string name="myDervice">我的设备</string>
    <string name="ReDerviceName">修改设备名称</string>
    <string name="ToDeleteDervice">是否确认删除设备信息</string>
    <string name="lookDervice">发现设备</string>
    <string name="history_good">历史最好成绩</string>
    <string name="write_yijian">写下你的意见或建议</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="number_No_binder">帐号未绑定</string>
    <string name="have_number">已有帐号登录</string>
    <string name="go_reigst">去注册</string>
    <string name="device_connect">设备连接成功</string>
    <string name="no_date">清除完成</string>
    <string name="AppName">健身器材</string>
    <string name="ci">次</string>
    <string name="sprotTime">健身器材提醒您段炼时间到了！</string>
    <string name="start_tiao">开始跳绳</string>
    <string name="nuli">该功能正在努力开放中...</string>

</resources>
