<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fitness_equipment.test.com.fitness_equipment.activity.UserReigstMessageActivity">




    <ImageView
        android:id="@+id/gender_user_img"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@mipmap/female_head"
        android:layout_weight="2.50"
        android:layout_gravity="center"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/et_name"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ed_shape"
            android:hint="@string/name"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        <EditText
            android:id="@+id/et_phone"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ed_shape"
            android:hint="@string/phone"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        <EditText
            android:id="@+id/et_email"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ed_shape"
            android:hint="@string/email"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        <EditText
            android:id="@+id/et_area"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ed_shape"
            android:hint="@string/area"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                >

                <Button
                    android:id="@+id/last_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/Last_step"
                    android:background="@drawable/button_bg"
                    />

                <Button
                    android:id="@+id/next_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sure"
                    android:background="@drawable/button_bg"
                    />


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
