<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/dialog_shape_bg"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/for_tv_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="#242424"
            android:textSize="15dp"
            android:text="@string/exit_login"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/text_for_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/exit_login_msg"
            android:gravity="center"
            android:textColor="#242424"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="#CDCDCD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_no_xian_ss"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#242424"

                />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#CDCDCD"

                />

            <Button
                android:id="@+id/btn_yes_xiaxian_ss"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/determine"
                android:textColor="#242424" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
