<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#F3F3F3"
    android:orientation="vertical"
    tools:context="fitness_equipment.test.com.fitness_equipment.activity.RePassActivity">

    <include layout="@layout/header_bar_small"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F3F3F3"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFF"
        >

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/input_oldpass"
            android:paddingLeft="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginLeft="20dp"
            ></View>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/intput_newPass"
            android:paddingLeft="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginLeft="20dp"
            ></View>
        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/forIntPutNewPass"
            android:paddingLeft="20dp"
            />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_determine"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/determine"
            android:textColor="#fff"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#BFE7DD"
            />

    </RelativeLayout>

</LinearLayout>
